--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ main hr {
     left: 45%;
   }
 }
-@media screen and (min-width: 1025px) and (max-width: 1440px) {
+@media screen and (min-width: 1025px) {
   #guy {
     border: 3px solid #fff;
     border-radius: 50px;
