--- a/index.scss
+++ b/index.scss
@@ -114,7 +114,7 @@ body{
         }
     }
 
-    @media screen and (min-width: 1025px) and (max-width: 1440px) {
+    @media screen and (min-width: 1025px) {
         #guy{
             border: 3px solid #fff;
             border-radius: 50px;
